--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -943,6 +943,86 @@ Stainless output:
 
 \end{lstlisting}
 
+Before:
+\begin{lstlisting}[style=scala]
+sealed abstract class Number {
+  type A = BigInt
+
+  /** The underlying scala number used to to hold the number */
+  protected def underlying: A
+
+  def toBigInt: BigInt = underlying
+
+  /** Factory function to create the underlying T, for instance a UInt32 */
+  def apply: A => Int64
+
+  def +(num: Int64): Int64 = apply(checkResult(underlying + num.underlying))
+
+  /**
+    * Checks if the given result is within the range
+    * of this number type
+    */
+  private def checkResult(result: BigInt): A = {
+    require(
+          result <= BigInt("9223372036854775807")
+      && result >= BigInt("-9223372036854775808"))
+    result
+  }
+}
+
+/**
+  * Represents a signed number in our number system
+  * Instances of this is [[Int64]]
+  */
+sealed abstract class SignedNumber extends Number
+
+/**
+  * Represents a int64_t in C
+  */
+sealed abstract class Int64 extends SignedNumber {
+  override def apply: A => Int64 = Int64(_)
+}  
+\end{lstlisting}
+
+After:
+\begin{lstlisting}[style=scala]
+sealed abstract class Number {
+  /** The underlying scala number used to to hold the number */
+  protected def underlying: BigInt
+
+  def toBigInt: BigInt = underlying
+
+  /** Factory function to create the underlying T, for instance a UInt32 */
+  def apply: BigInt => Int64
+
+  def +(num: Int64): Int64 = apply(checkResult(underlying + num.underlying))
+
+  /**
+    * Checks if the given result is within the range
+    * of this number type
+    */
+  private def checkResult(result: BigInt): BigInt = {
+    require(
+         result <= BigInt("9223372036854775807")
+      && result >= BigInt("-9223372036854775808"))
+    result
+  }
+}
+
+/**
+  * Represents a signed number in our number system
+  * Instances of this is [[Int64]]
+  */
+sealed abstract class SignedNumber extends Number
+
+/**
+  * Represents a int64_t in C
+  */
+sealed abstract class Int64 extends SignedNumber {
+  override def apply: BigInt => Int64 = Int64(_)
+}
+\end{lstlisting}
+
 This is easy.
 We just replace all occurrence of A with BigInt, since A is not overwritten in an implementing class.
 This is not the exact same code, because an implementing class can not override A anymore but that's fine for our verification.
