--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -1550,27 +1550,65 @@ Now we will look into the previous error.
 There is another problem with Bitcoin-S.
 Bitcoin-S-Core uses require as a fail-fast method whereas Stainless needs it to verify the code.
 
-The Stainless output again:
-\begin{lstlisting}[style=stainless]
-  [Warning ] Found counter-example:
-  [Warning ]   thiss: { x: Object | @unchecked isNumber(x) } -> Int64Impl(0)
-  [Warning ]   num: { x: Object | @unchecked isInt64(x) }    -> Int64Impl(9223372036854775808)
-\end{lstlisting}
+Stainless output now: \todo{kai special chars again}
+% \begin{lstlisting}[style=stainless][Warning ] The Z3 native interface is not available. Falling back onto smt-z3.
+%   [  Info  ]  - Checking cache: 'postcondition' VC for + @12:3...
+%   [  Info  ]  - Checking cache: 'adt invariant' VC for apply @34:39...
+%   [  Info  ]  - Checking cache: 'adt invariant' VC for apply @62:38...
+%   [  Info  ] Cache miss: 'adt invariant' VC for apply @62:38...
+%   [  Info  ] Cache hit: 'adt invariant' VC for apply @34:39...
+%   [  Info  ] Cache hit: 'postcondition' VC for + @12:3...
+%   [  Info  ]  - Now solving 'adt invariant' VC for apply @62:38...
+%   [  Info  ]  - Result for 'adt invariant' VC for apply @62:38:
+%   [Warning ]  => INVALID
+%   [Warning ] Found counter-example:
+%   [Warning ]   bigInt: BigInt -> -9223372036854775809
+%   [  Info  ]  - Checking cache: 'precond. (call checkResult(thiss, underlying(thiss) + u ...)' VC for + @17:36...
+%   [  Info  ] Cache miss: 'precond. (call checkResult(thiss, underlying(thiss) + u ...)' VC for + @17:36...
+%   [  Info  ]  - Now solving 'precond. (call checkResult(thiss, underlying(thiss) + u ...)' VC for + @17:36...
+%   [  Info  ]  - Result for 'precond. (call checkResult(thiss, underlying(thiss) + u ...)' VC for + @17:36:
+%   [Warning ]  => INVALID
+%   [Warning ] Found counter-example:
+%   [Warning ]   num: Number   -> Int64Impl(9223372036854775807)
+%   [Warning ]   thiss: Number -> Int64Impl(1)
+%   [  Info  ]   ┌───────────────────┐
+%   [  Info  ] ╔═╡ stainless summary ╞═════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗
+%   [  Info  ] ║ └───────────────────┘                                                                                                                                                                             ║
+%   [  Info  ] ║ +      postcondition                                                 valid from cache            ../../../../../bin/../src/main/scala/addition/modified/currency/CurrencyUnits.scala:12:3   1.266 ║
+%   [  Info  ] ║ +      precond. (call checkResult(thiss, underlying(thiss) + u ...)  invalid           U:smt-z3  ../../../../../bin/../src/main/scala/addition/modified/number/NumberType.scala:17:36       0.089 ║
+%   [  Info  ] ║ apply  adt invariant                                                 valid from cache            ../../../../../bin/../src/main/scala/addition/modified/currency/CurrencyUnits.scala:34:39  0.194 ║
+%   [  Info  ] ║ apply  adt invariant                                                 invalid           U:smt-z3  ../../../../../bin/../src/main/scala/addition/modified/number/NumberType.scala:62:38       0.348 ║
+%   [  Info  ] ╟┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄╢
+%   [  Info  ] ║ total: 4    valid: 2    (2 from cache) invalid: 2    unknown: 0    time:   1.897                                                                                                                  ║
+%   [  Info  ] ╚═══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝
+%   [  Info  ] Shutting down executor service.
+% \end{lstlisting}
 
 Corresponding code:
 
 \begin{lstlisting}[style=scala]
-  sealed abstract class Number extends BasicArithmetic[Int64] {
-    override def +(num: Int64): Int64 = apply(checkResult(underlying + num.underlying))
+sealed abstract class Number {
+  /** The underlying scala number used to to hold the number */
+  protected def underlying: BigInt
 
-    private def checkResult(result: BigInt): BigInt = {
-      require(
-        result <= BigInt("9223372036854775807")
-        && result >= BigInt("-9223372036854775808")
-      )
-      result
-    }
+  def toBigInt: BigInt = underlying
+
+  /** Factory function to create the underlying T, for instance a UInt32 */
+  def apply: BigInt => Int64
+
+  def +(num: Int64): Int64 = apply(checkResult(underlying + num.underlying))
+
+  /**
+    * Checks if the given result is within the range
+    * of this number type
+    */
+  private def checkResult(result: BigInt): BigInt = {
+    require(
+          result <= BigInt("9223372036854775807")
+      && result >= BigInt("-9223372036854775808"))
+    result
   }
+}
 \end{lstlisting}
 
 But how does Stainless find a counter example ignoring the require in checkResult?
